crates/pardosa-schema/tests/compile_fail/nested_hashmap.rs
use pardosa_schema::GenomeSafe;
use std::collections::HashMap;
#[derive(GenomeSafe)]
struct Bad {
    data: Vec<HashMap<String, u32>>,
}
fn main() {}
